2014-03-03  Barton E. Schaefer  <schaefer@zsh.org>

	* users/18550: Doc/Zsh/compsys.yo: matcher-list clarifications
2014-03-03  Simon Ruderich  <simon@ruderich.org>

	* 32289: Doc: Add zsh version to footer in HTML documentation.

2014-03-03  Oliver Kiddle  <opk@zsh.org>

	* 32441: Completion/Base/Completer/_extensions, Doc/Zsh/compsys.yo:
	add completer for file extensions

	* 32450: Src/Zle/zle_hist.c: make get-line set the history
	number that was saved with the line

	* 32448: Src/Zle/zle_params.c: fix seg fault after recursive-edit

	* 32439 (with Yuri D'Elia): Completion/Base/Core/_main_complete:
	add new show-ambiguity style

	* 32436: Src/Zle/complist.c: allow = to be used in ZLS_COLORS
	patterns if it is quoted or inside parentheses

2014-03-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32453: Functions/Misc/zcalc: fix default base handling.

	* Manuel Presnitz: 32412 modified c.f. 32415:
	Completion/Zsh/Type/_globquals, Doc/Zsh/expn.yo, Src/glob.c,
	Src/zsh.h: gigabyte and terabyte units for glob qualifiers.

2014-02-28  Peter Stephenson  <p.stephenson@samsung.com>

	* users/18531 plus doc etc.: Doc/Zsh/contrib.yo,
	Functions/Zle/.distfiles, Functions/Zle/expand-absolute-path:
	new expand-absolute-path ZLE widget.

2014-02-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jun T: 32435: Completion/Base/Core/_description,
	Completion/Unix/Command/_rm: improved quoting for ignore-line
	style.

2014-02-24  Oliver Kiddle  <opk@zsh.org>

	* unposted: Doc/Zsh/compsys.yo: fix typo

	* unposted: Completion/X/Command/_x_utils: duplicate local
	statement was printing variable value

	* users/18498: Completion/Base/Completer/_expand_alias: observe
	add-space style in _expand_alias so suffix can be disabled

	* users/18485: Completion/Unix/Command/_git: add .. as an
	auto-removable suffix in git revision ranges

2014-02-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Hong Xu: 32492: Completion/Unix/Command/_npm: fix outdated
	completion.
